Use enclosingIntRect when computing paint invalidations across transforms.

Pixel-snapping cannot be computed correctly across the transform if the transform
includes a scale component.

BUG=622232

Review-Url: https://codereview.chromium.org/2098683003
Cr-Commit-Position: refs/heads/master@{#402023}

Former-commit-id: 05953c442a6d3a9dd96bc4bb36c27f0dec5ef008